Finish writing the app

--- a/views/chess.html
+++ b/views/chess.html
@@ -13,5 +13,10 @@
 </head>
 <body data-gameid="{{ gameId }}" data-orientation="{{ orientation }}">
     <h1>Game Id: <code>{{ gameId }}</code></h1>
+    <h2><a href="/">Back</a></h2>
+
+    <section>
+        <div id="chess" style="width: 400px"></div>
+    </section>
 </body>
 </html>
